--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,170 @@
-/* Your Website Styles */
-body {
-	background: #eee;
+/***************************** 
+Colors
+******************************/
+
+.container {
+	background-color: #D1D3D4;
+}
+
+a {
+	color: white;
 }
 
 
-div {
-	margin-top: -60px;	x 
+header {
+  background-color: #414042;
+}
+
+.name {
+	color: #414042;
+}
+
+.about {
+	color: #414042;
+}
+
+.about p {
+	color: #686868;
+}
+
+.main-footer {
+	color: #414042;
+}
+
+h2 {
+	color: #414042;
+}
+
+.experience {
+	color: #414042;
+}
+
+.experience p {
+	color: #686868;
 }
 
 
-/* Show Grid */
-.showgrid {
-	background: url("../img/grid-bg.png") repeat-y;
+/***************************** 
+Navigation
+******************************/
+
+a {
+  text-decoration: none;
+  margin: 0;
+  font-size: 18px;
+}
+
+nav ul {
+	text-align: right;
+  	margin: 0;
+  	padding: 0 60px 0 0;
+}
+
+nav li {
+	display: inline-block;
+}
+
+li {
+	list-style: none;
+	padding: 40px 20px 20px 0;
+}
+
+/***************************** 
+Header
+******************************/
+
+header {
+	width: 100%;
+	height: 80px;
+	margin: 0;
+	padding: 0;
+	border-bottom: 2px solid #03B9FF;
+}
+
+/***************************** 
+Container
+******************************/
+
+.container {
+	width: 1080px;
+	margin: auto;
+}
+
+/***************************** 
+About Me
+******************************/
+
+.main-content {
+	width: 50%;
+	height: auto;
+	margin: auto;
+	text-align: center;
+}
+
+.education {
+	font-size:26px;
+	margin: 20px 0 40px 0;
+}
+
+.about p {
+	padding: 0 0 0 40px;
+}
+
+
+.me {
+	width: 100%;
+	margin: 0 0 25px 0;
+	border-top-left-radius: 20%;
+}
+
+.about {
+	text-align: justify;
+	line-height: 20px;
+	margin: 0 0 40px 0;
+}
+
+.name {
+	margin: 100px 0 40px 0;
+	text-align: center;
+}
+
+/***************************** 
+VCD 
+******************************/
+
+.experience {
+	text-align: left;
+	margin: 0 0 40px 0;
+}
+
+.exp {
+	font-size: 26px;
+	margin: 20px 0 40px 0;
+}
+
+.experience h3 {
+	padding: 0 0 0 40px;
+	margin: 0 0 10px 0;
+}
+
+.experience p {
+	margin: 0 0 0 40px;
+	text-align: justify;
+	line-height: 20px;
+}
+
+/***************************** 
+Footer
+******************************/
+
+footer {
+	text-align: left;
+}
+
+footer p {
+	margin: 0 0 10px 0;
+}
+
+.social-media {
+	word-spacing: 7px;
 }
