--- a/css/styles.css
+++ b/css/styles.css
@@ -10,20 +10,21 @@ a {
 	color: white;
 }
 
+.main-content {
+	color: #686868;
+}
+
 
 header {
   background-color: #414042;
 }
 
-.name {
+
+.pstyle {
 	color: #414042;
 }
 
-.about {
-	color: #414042;
-}
-
-.about p {
+.pstyle p {
 	color: #686868;
 }
 
@@ -37,10 +38,6 @@ h2 {
 
 .experience {
 	color: #414042;
-}
-
-.experience p {
-	color: #686868;
 }
 
 
@@ -90,10 +87,6 @@ Container
 	margin: auto;
 }
 
-/***************************** 
-About Me
-******************************/
-
 .main-content {
 	width: 50%;
 	height: auto;
@@ -101,31 +94,40 @@ About Me
 	text-align: center;
 }
 
-.education {
-	font-size:26px;
-	margin: 20px 0 40px 0;
-}
+/***************************** 
+Paragraph Style
+******************************/
 
-.about p {
+.pstyle p {
 	padding: 0 0 0 40px;
 }
 
-
-.me {
-	width: 100%;
-	margin: 0 0 25px 0;
-	border-top-left-radius: 20%;
-}
-
-.about {
+.pstyle {
 	text-align: justify;
 	line-height: 20px;
 	margin: 0 0 40px 0;
 }
 
-.name {
-	margin: 100px 0 40px 0;
-	text-align: center;
+h3 {
+	padding: 0 0 0 40px;
+}
+
+/***************************** 
+Personal Statement
+******************************/
+
+.statement {
+	font-size: 26px;
+	margin: 150px 0 40px 0;
+}
+
+/***************************** 
+Education 
+******************************/
+
+.education {
+	font-size:26px;
+	margin: 20px 0 40px 0;
 }
 
 /***************************** 
